--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "jasmine-reporters": "^2.5.0",
+    "protractor": "^7.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "webdriver-manager": "^12.1.8",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
