--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.0",
+    "@angular/cdk": "^13.2.5",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
+    "@angular/material": "^13.2.5",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@material/toolbar": "^2.3.0",
+    "bootstrap": "^5.1.3",
+    "igniteui-angular": "^13.1.0",
     "jasmine-reporters": "^2.5.0",
     "protractor": "^7.0.0",
     "rxjs": "~7.5.0",
